legend-pure-rust/crates/parser/tests/snapshots/test_expression__boolean_precedence.snap
---
source: crates/parser/tests/test_expression.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "test",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 14,
                                end_line: 2,
                                end_column: 17,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Boolean",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                algebra_ops: [],
                                subset_bound: None,
                                equal_binding: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 28,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        constraints: [],
                        body: [
                            Logical(
                                LogicalExpr {
                                    left: Literal(
                                        Boolean(
                                            BooleanLiteral {
                                                value: true,
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 5,
                                                    end_line: 4,
                                                    end_column: 8,
                                                },
                                            },
                                        ),
                                    ),
                                    op: Or,
                                    right: Logical(
                                        LogicalExpr {
                                            left: Literal(
                                                Boolean(
                                                    BooleanLiteral {
                                                        value: false,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 4,
                                                            start_column: 13,
                                                            end_line: 4,
                                                            end_column: 17,
                                                        },
                                                    },
                                                ),
                                            ),
                                            op: And,
                                            right: Literal(
                                                Boolean(
                                                    BooleanLiteral {
                                                        value: true,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 4,
                                                            start_column: 22,
                                                            end_line: 4,
                                                            end_column: 25,
                                                        },
                                                    },
                                                ),
                                            ),
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 19,
                                                end_line: 4,
                                                end_column: 20,
                                            },
                                        },
                                    ),
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 10,
                                        end_line: 4,
                                        end_column: 11,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 5,
                            end_column: 1,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
