legend-pure-rust/crates/parser/tests/snapshots/test_expression__collection_with_function.snap
---
source: crates/parser/tests/test_expression.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "test",
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Boolean",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 28,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        body: [
                            ArrowFunction(
                                ArrowFunction {
                                    target: Collection(
                                        CollectionExpr {
                                            elements: [
                                                Group(
                                                    Logical(
                                                        LogicalExpr {
                                                            left: Literal(
                                                                Boolean(
                                                                    BooleanLiteral {
                                                                        value: true,
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 7,
                                                                            end_line: 4,
                                                                            end_column: 10,
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            op: And,
                                                            right: Literal(
                                                                Boolean(
                                                                    BooleanLiteral {
                                                                        value: false,
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 15,
                                                                            end_line: 4,
                                                                            end_column: 19,
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 12,
                                                                end_line: 4,
                                                                end_column: 13,
                                                            },
                                                        },
                                                    ),
                                                ),
                                                Literal(
                                                    Boolean(
                                                        BooleanLiteral {
                                                            value: false,
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 23,
                                                                end_line: 4,
                                                                end_column: 27,
                                                            },
                                                        },
                                                    ),
                                                ),
                                            ],
                                            multiplicity: None,
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 5,
                                                end_line: 4,
                                                end_column: 5,
                                            },
                                        },
                                    ),
                                    function: PackageableElementPtr {
                                        package: None,
                                        name: "oneOf",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 29,
                                            end_line: 4,
                                            end_column: 30,
                                        },
                                    },
                                    arguments: [],
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 29,
                                        end_line: 4,
                                        end_column: 30,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
